[package]
edition = "2021"
name = "astro-surf"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = "0.6.19"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
