[package]
edition = "2021"
name = "astro-surf"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = "0.6.20"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13.3", default-features = false, features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2.13.0"
serde_json = "1.0.105"
tokio = { version = "1.31.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
